# flaskframeworkapi

./: README.md  app.py  dev.py  generator.py  migrator.py  requirements.txt  run.bat  server.py  settings.py
generators/: handler_generator.gn  model_generator.gn  route_generator.gn
handler/: handler.py  handlerIndex.py
infra/: log.py  servererror.py
middlewares/: middleware.py  middlewareAuth.py
migrations/: migration.sql
repository/: database.py
routes/: __init__.py  route_index.py
