from flask.blueprints import Blueprint
from flask_cors import cross_origin

from handler.{{handlerfile}} import {{handlername}}


route_{{route_name}} = Blueprint('route_{{route_name}}', __name__, template_folder='templates')

@route_{{route_name}}.route("/{{route_endpoint}}", methods = ["GET","POST","PUT","DELETE"])
@cross_origin(headers=["Content-Type", "Authorization"])
def index(): return {{handlername}}().handler()